# Changelog
All notable changes to this project will be documented in this file.

The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [2.0.0]
- Update to a single credentials config file for config and credentials authentication.
- Add default hcli_core HCLI (hco) to manage credentials.
- Update digest instructions to help avoid password leaks (hco should be used however)
- Update hcli_core man page with parameter names for gunicorn example

## [1.2.1]
- Update missing proper pyproject package configuration to dismiss build warnings
- Update universal dist flag since Python 2.7 is not supported

## [1.2.0]
- Update to falcon 4.0.1
- Update to gunicorn 23.0.0 in circleci tests
- Fix README and hcli_core documentation typos

## [1.1.2]
- Update pyproject.toml with missing python 3.12 support reference

## [1.1.1]
- Update README with future support for HTTP API Problem Details per spec to help with STDERR [RFC9457]
- Update hcli_core help file typo around CREDENTIALS FILE FORMAT for HTTP Basic Auth

## [1.1.0]
- Add HTTP Basic Auth support (configuration and credentials file)
- Improve logging
- Enhance man page to be better aligned with the expected file format
- Add support for python 3.12

## [1.0.4]
- Update to further differentiate in support of a working pyproject.toml configuration

## [1.0.3]
- Revert back to working full packaged data

## [1.0.2]
- Update to cleanup additional packaged sample hcli files

## [1.0.1]
- Update to reattempt packaging the py files properly under site-packages when installed via pip

## [1.0.0]
- Update to Beta
- Ensure the project gets bundled and unpacked properly when installed via pip

## [0.20.4]
- Update to pyproject.toml in prepration for pip deprecation of setup.py use

## [0.20.3]
- Documentation update

## [0.20.2]