@@ -11,10 +11,10 @@ log = logger.Logger("hcli_core")
 
 
 class CredentialManager:
-    def __init__(self, config_file_path=None):
+    def __init__(self):
         self._lock = threading.RLock()
         self._credentials = None
-        self.config_file_path = config_file_path or config.default_config_file_path
+        self.parse_configuration()
 
     @property
     def credentials(self):
@@ -26,19 +26,70 @@ class CredentialManager:
         with self._lock:
             self._credentials = value
 
+    # parses credentials configuration
+    def parse_configuration(self):
+        auth = config.auth
+
+        try:
+            parser = ConfigParser()
+            parser.read(config.config_file_path)
+            if parser.has_section("config"):
+                for section_name in parser.sections():
+                    if section_name == "config":
+                        log.info("[" + section_name + "]")
+                        for name, value in parser.items("config"):
+                            if name == "authenticate":
+                                if value != "False" and value != "True":
+                                    log.warning("Unsuported authentication value: " + str(value) + ". Disabling authentication.")
+                                    config.auth = False
+                                    log.info("Authenticate: " + str(config.auth))
+                                else:
+                                    auth = value
+                                    if value.lower() == 'true':
+                                        config.auth = True
+                                    elif value.lower() == 'false':
+                                        config.auth = False
+                                    log.info("Authenticate: " + str(config.auth))
+            else:
+                log.critical("No [config] configuration available for " + config.config_file_path + ".")
+                assert isinstance(auth, str)
+        except:
+            log.critical("Unable to load configuration.")
+            assert isinstance(auth, str)
+
     def parse_credentials(self):
         with self._lock:
             try:
                 parser = ConfigParser()
                 log.info("Loading credentials")
-                log.info(self.config_file_path)
-                parser.read(self.config_file_path)
+                log.info(config.config_file_path)
+                parser.read(config.config_file_path)
 
+                # Check if we have a default section for the admin user
                 if not parser.has_section("default"):
-                    log.critical(f"No [default] credential available for {self.config_file_path}")
+                    log.critical(f"No [default] credential available for {config.config_file_path}.")
                     self._credentials = None
                     assert isinstance(self._credentials, dict)
                     return False
+
+                # Check if we have a default admin username and password
+                if not parser.has_option("default", "username") or parser.get("default", "username") != "admin" or not parser.has_option("default", "password"):
+                    log.critical(f"Invalid or missing admin username or password in [default] section of {config.config_file_path}.")
+                    self._credentials = None
+                    assert isinstance(self._credentials, dict)
+                    return False
+
+                # Check for unique usernames across all sections
+                usernames = set()
+                for section in parser.sections():
+                    if parser.has_option(section, "username"):
+                        username = parser.get(section, "username")
+                        if username in usernames:
+                            log.critical(f"Duplicate username '{username}' found in {config.config_file_path}.")
+                            self._credentials = None
+                            assert isinstance(self._credentials, dict)
+                            return False
+                        usernames.add(username)
 
                 new_credentials = {}
                 for section_name in parser.sections():
@@ -50,7 +101,7 @@ class CredentialManager:
                 return True
 
             except Exception as e:
-                log.critical(f"Unable to load credentials: {str(e)}")
+                log.critical(f"Unable to load credentials: {str(e)}.")
                 self._credentials = None
                 assert isinstance(self._credentials, dict)
                 return False
@@ -77,7 +128,7 @@ class CredentialManager:
                 return False
 
             except Exception as e:
-                log.error(f"Error validating credentials: {str(e)}")
+                log.error(f"Error validating credentials: {str(e)}.")
                 return False
 
     @property
